[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scene/Object/Lab_region/LabObjectBase.gd" type="Script" id=1]
[ext_resource path="res://Scene/Object/Office_region/Heater/ExplosionDamage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/UI/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Object/Lab_region/Button/BottonFloor1.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 210, 244 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 210, 0, 210, 244 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Pressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36.5866, 19.1014 )

[sub_resource type="Animation" id=5]
length = 0.6
step = 0.2

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Idle", "Idle" ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Pressed", "Pressed" ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16.851, 17.8488 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 28.35
gravity = Vector3( -98, 0, 0 )
initial_velocity = 58.9
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Button" type="StaticBody2D" groups=[
"LaserAble",
]]
position = Vector2( 141.033, 106.99 )
collision_layer = 8
script = ExtResource( 1 )
button = true
explodeDamage = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.21085, -5.38688 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4.33441, -5.7201 )
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Pressed = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 1024
collision_mask = 2147483649

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 2.4665, -4.45658 )
shape = SubResource( 8 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( -0.112572, -1.98876 )
rotation = -1.5708
emitting = false
lifetime = 2.0
speed_scale = 1.49
process_material = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
